@@ -40,7 +40,7 @@
 
 #define AGS_MIDI_EXPORT_WIZARD_DEFAULT_TIMES (30)
 #define AGS_MIDI_EXPORT_WIZARD_DEFAULT_CLICKS (4)
-#define AGS_MIDI_EXPORT_WIZARD_DEFAULT_DIVISION (0xe250)
+#define AGS_MIDI_EXPORT_WIZARD_DEFAULT_DIVISION (480)
 
 #define AGS_MIDI_EXPORT_WIZARD_DEFAULT_PULSE_UNIT (16.0 * AGS_SOUNDCARD_DEFAULT_BPM / 60.0 * 1.0 / (AGS_MIDI_EXPORT_WIZARD_DEFAULT_DIVISION >> 8) / (0xff & AGS_MIDI_EXPORT_WIZARD_DEFAULT_DIVISION) * 1000000.0)
 
